--- a/main.scss
+++ b/main.scss
@@ -25,7 +25,7 @@ $greenColor: rgb(49 181 182);
 }
 
 @mixin marginResponsive {
-  margin-top: 50px;
+  margin-top: 60px;
   margin-bottom: 30px;
 }
 
@@ -456,12 +456,12 @@ footer {
         li {
           a {
             font-size: 25px;
-            margin: 15px;
+            margin: 10px;
             display: inline-block;
           }
           .contact-buttom {
             padding: 10px;
-            font-size: 19px;
+            font-size: 18px;
             margin: 0px;
           }
         }
@@ -482,12 +482,13 @@ footer {
       }
       h1 {
         font-size: 50px;
+        margin-block: 10px;
       }
       .dowloand-cv {
         margin: 0 auto;
         margin-top: 20px;
         font-size: 25px;
-        padding: 18px;
+        padding: 10px;
         color: black;
       }
     }
@@ -502,8 +503,13 @@ footer {
 
   #skills {
     flex-direction: column;
-    @include marginResponsive;
+    align-items: center;
+
     .skills-subtitle {
+      h2 {
+        margin: 0 auto;
+        @include marginResponsive;
+      }
       width: 100%;
       margin: 0;
       text-align: center;
@@ -573,12 +579,29 @@ footer {
   }
 
   #education {
-    @include marginResponsive;
-
     .education-items {
+      align-items: center;
       margin: 0;
-      .education-coursera {
+      .education-subtitle {
+        h2 {
+          @include marginResponsive;
+        }
+      }
+      .education-coursera,
+      .education-colbach {
         margin-bottom: 40px;
+        flex-direction: row-reverse;
+        .education-info {
+          margin: 0;
+          margin-left: 15px;
+
+          align-items: flex-start;
+          h3,
+          span,
+          p {
+            text-align: start;
+          }
+        }
       }
     }
   }
