--- a/main.css
+++ b/main.css
@@ -224,8 +224,12 @@ body {
 }
 
 #experience {
-  margin: 120px;
+  padding: 30px 0px;
   margin-bottom: 0;
+  background-image: linear-gradient(260deg, #effbeb 0%, #c9f6d7 100%);
+}
+#experience .experience-subtitle {
+  margin-left: 120px;
 }
 #experience .experience-subtitle h2 {
   font-size: 30px;
@@ -239,6 +243,8 @@ body {
 #experience .experience-item {
   display: flex;
   width: 50%;
+  margin-top: 30px;
+  margin-left: 120px;
 }
 #experience .experience-company-logo img {
   width: 60px;
@@ -289,6 +295,7 @@ body {
 #education .education-coursera,
 #education .education-colbach {
   display: flex;
+  margin-top: 30px;
 }
 #education .education-coursera .education-info,
 #education .education-colbach .education-info {
