--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+@-webkit-keyframes bounce {
+  30% {
+    transform: translateY(-10px);
+  }
+}
+@keyframes bounce {
+  30% {
+    transform: translateY(-10px);
+  }
+}
 body {
   font-family: sans-serif;
 }
@@ -91,6 +101,8 @@ body {
   cursor: pointer;
 }
 #biography .dowloand-cv:hover {
+  -webkit-animation: bounce 1s;
+          animation: bounce 1s;
   background: #93aafc;
 }
 #biography .biography-banner {
@@ -172,7 +184,7 @@ body {
   justify-content: space-around;
 }
 #my-projects .projects-wrapper .project {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -181,8 +193,9 @@ body {
   margin-right: 20px;
 }
 #my-projects .projects-wrapper .project:hover {
-  transition: 2s;
-  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.2), 0 13px 26px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation: bounce 1s;
+          animation: bounce 1s;
+  transition: 1s;
 }
 #my-projects .projects-wrapper .project .project-thumbnail img {
   width: 100%;
