--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,14 @@ $buttonColor: #7794ff;
 $buttonHover: #93aafc;
 $purpleColor: #8820b5;
 $greenColor: rgb(49 181 182);
+
+//keyframes
+@keyframes bounce {
+  30% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+}
 // mixin
 @mixin faBrandsSize($size, $color) {
   font-size: $size;
@@ -124,9 +132,11 @@ body {
     background: $buttonColor;
     cursor: pointer;
     &:hover {
+      animation: bounce 1s;
       background: $buttonHover;
     }
   }
+
   .biography-banner {
     width: 40%;
     img {
@@ -200,8 +210,8 @@ body {
     justify-content: space-around;
 
     .project {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1),
+        0 6px 20px 0 rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -209,9 +219,10 @@ body {
       padding: 10px;
       margin-right: 20px;
       &:hover {
-        transition: 2s;
-        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.2),
-          0 13px 26px 0 rgba(0, 0, 0, 0.19);
+        animation: bounce 1s;
+        transition: 1s;
+        // box-shadow: 0 10px 15px 0 rgba(194, 234, 244, 0.2),
+        //   0 13px 26px 0 rgba(154, 236, 247, 0.19);
       }
       .project-thumbnail {
         img {
